about page header line height fixed on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,7 @@ h2 {
     font-size: 35px;
     font-family: var(--default-font-family);
 }
-h4{
+h4 {
     font-size: 35px;
 }
 p {
@@ -77,7 +77,17 @@ img {
 }
 @media (max-width: 960px) {
     h1 {
+        font-size: 46px;
+    }
+    .intro-content h1 {
         font-size: 40px;
+        line-height: 0.8;
+    }
+    .intro-content h2 {
+        font-size: 20px;
+    }
+    .intro-content h3 {
+        font-size: 23px;
     }
     .intro p {
         font-size: 20px;
@@ -100,6 +110,7 @@ img {
     }
 }
 
+
 .project-intro {
     font-weight: 800;
     font-size: 20px;
@@ -115,9 +126,7 @@ img {
     padding: 12px 20px;
 }
 
-
-
-footer .contact-box{
+footer .contact-box {
     background-color: var(--background-color);
     padding: 40px;
     border-radius: 10px;
